--- a/ProjectRealPython/projects/templates/project_detail.html
+++ b/ProjectRealPython/projects/templates/project_detail.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %}
-{% load static %}
+{% extends "project_index.html" %}
+{% load staticfiles %}
 
 {% block page_content %}
 <h1>{{ project.project_title }}</h1>
