--- a/ProjectRealPython/projects/templates/project_detail.html
+++ b/ProjectRealPython/projects/templates/project_detail.html
@@ -2,21 +2,19 @@
 {% load staticfiles %}
 
 {% block page_content %}
-<h1>{{ project.project_title }}</h1>
-<div class="row">
-    <div class="col-md-8">
-        <img src="{% static projects.image %}" alt="" width="100%">
-    </div>
-    <div class="col-md-4">
-        <h5>About the project:</h5>
-        <p>{{ project.description }}</p>
-        <br>
-        <h5>Technology used:</h5>
-        <p>{{ project.technology }}</p>
-    </div>
+
+-----------------------------------------------------------------
+
+<div class="card mb-3">
+  <img src="{% static projects.image %}" class="card-img-top" alt="..." style="width: 100px">
+  <div class="card-body">
+    <h5 class="card-title">{{ project.project_title }}</h5>
+    <h5 class="card-title">{{ project.technology }}</h5>
+    <h1>hello</h1>
+    <p class="card-text">{{ project.description }}</p>
+    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+  </div>
 </div>
-    <a href="{% url 'project_index' %}"
-                   class="btn btn-primary">
-                    Back
-                </a>
+<a href="{% url 'project_index' %}" class="btn btn-primary">Back</a>
 {% endblock %}
+
