--- a/ProjectRealPython/projects/templates/project_index.html
+++ b/ProjectRealPython/projects/templates/project_index.html
@@ -1,12 +1,6 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-
-
-{% load static %}
-<link rel="stylesheet" href="../static/style.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" type="text/css" href="{% static '/css/projectcss/style.css' %}">
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
