--- a/ProjectRealPython/projects/templates/project_index.html
+++ b/ProjectRealPython/projects/templates/project_index.html
@@ -44,40 +44,41 @@
 </nav>
 
 
+
 {% block page_content %}
 
-<center><h1>Projects</h1></center><br>
+<center>
+  <h1>Projects</h1>
+</center><br>
 <div class="row">
 
-{% for project in projects %}
+  {% for project in projects %}
 
-    <div class="col-md-4">
+  <div class="col-md-4">
 
-        <div class="card mb-2">
+    <div class="card mb-2">
 
-            <img class="card-img-top" src="{% static project.image %}">
+      <img class="card-img-top" src="{% static project.image %}">
 
-            <div class="card-body">
+      <div class="card-body">
 
-                <h5 class="card-title">{{ project.title }}</h5>
+        <h5 class="card-title">{{ project.title }}</h5>
 
-                <p class="card-text">{{ project.description }}</p>
+        <p class="card-text">{{ project.description }}</p>
 
-                <a href="{% url 'project_detail' project.pk %}"
+        <a href="{% url 'project_detail' project.pk %}" class="btn btn-primary">
 
-                   class="btn btn-primary">
+          Read More
 
-                    Read More
+        </a>
 
-                </a>
-
-            </div>
-
-        </div>
+      </div>
 
     </div>
 
-    {% endfor %}
+  </div>
+
+  {% endfor %}
 
 </div>
 
