--- a/ProjectRealPython/personal_portofolio/templates/base.html
+++ b/ProjectRealPython/personal_portofolio/templates/base.html
@@ -1,39 +1,30 @@
+{% load static %}
+<link rel="favico" type="image/png" href="{% static 'favicon.ico' %}"/>
 <link rel="stylesheet" href="../static/style.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark ">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">NL</a>
+    <a class="navbar-brand" href="{% url 'home_page' %}">NL</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
+      <ul class="navbar-nav me-auto mb-auto mb-lg-0">
 
+        <li class="nav-item ms-5 me-3">
+          <a type="button" href="{% url 'blog_index' %}" class="btn btn-outline-primary" >About me</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'blog_index' %}">Blog</a>
+        <li class="nav-item ms-5 me-3">
+          <a class="btn btn-outline-primary" href="{% url 'blog_index' %}">Blog</a>
         </li>
-           <li class="nav-item">
-          <a class="nav-link" href="{% url 'project_index' %}">Projects</a>
+           <li class="nav-item ms-5 me-3">
+          <a class="btn btn-outline-primary" href="{% url 'project_index' %}">Projects</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Projects
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
+        
+    
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
